--- a/spring/work/Ex_0612_db/pom.xml
+++ b/spring/work/Ex_0612_db/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.korea</groupId>
-	<artifactId>di</artifactId>
+	<artifactId>db</artifactId>
 	<name>Ex_0612_db</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
@@ -14,6 +14,42 @@
 		<org.slf4j-version>1.7.25</org.slf4j-version>
 	</properties>
 	<dependencies>
+		<!--  commons DBCP -->
+		<dependency>
+    	<groupId>commons-dbcp</groupId>
+   		 <artifactId>commons-dbcp</artifactId>
+  		  <version>1.4</version>
+		</dependency>
+		
+		<!--  mybatis -->
+		<dependency>
+   		 <groupId>org.mybatis</groupId>
+   		 <artifactId>mybatis</artifactId>
+   		 <version>3.5.6</version>
+		</dependency>
+		
+		<!--  mybatis spring -->
+		<dependency>
+   		 <groupId>org.mybatis</groupId>
+   		 <artifactId>mybatis-spring</artifactId>
+   		 <version>1.3.1</version>
+		</dependency>
+		
+		<!-- spring-jdbc -->
+		<dependency>
+   		 <groupId>org.springframework</groupId>
+   		 <artifactId>spring-jdbc</artifactId>
+  		  <version>5.1.20.RELEASE</version>
+		</dependency>
+		
+		<!-- commons-dbcp -->
+		<dependency>
+		    <groupId>commons-dbcp</groupId>
+		    <artifactId>commons-dbcp</artifactId>
+		    <version>1.4</version>
+		</dependency>
+
+		
 		<!-- lombok -->
 		<dependency>
     	<groupId>org.projectlombok</groupId>
